Add JQuery and JSPDf libraries

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         </li>
     </ul>
     
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jspdf.min.js"></script>
     <script src="js/openpgp.min.js"></script>
     <script src="js/keyparty.js"></script>
 </body>
