Enable disable submit / info buttons as required

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         </li>
 
         <li>
-            <button>Print your key slip</button> (remember to bring it to the party!).
+            <button class="key-button">Print your key slip</button> (remember to bring it to the party!).
         </li>
 
         <li>
-            <button>Confirm your participation!</button>
+            <button class="key-button">Confirm your participation!</button>
         </li>
     </ol>
     
