Add expiration date

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
                 <td>Fingerprint</td>
                 <td> TODO </td>
             </tr>
+            <tr>
+                <td>Expiration</td>
+                <td><%=getExpiration(publicKey)%></td>
+            </tr>
         </table>
     </script>
     
