--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </tr>
             <tr>
                 <td>Fingerprint</td>
-                <td> TODO </td>
+                <td><%=getFingerPrint(publicKey)%></td>
             </tr>
             <tr>
                 <td>Expiration</td>
