Add pdf slip generation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </li>
 
         <li>
-            <button class="key-button">Print your key slip</button> (remember to bring it to the party!).
+            <button class="key-button" onclick="genSlip();">Print your key slip</button> (remember to bring it to the party!).
         </li>
 
         <li>
